test/langtools/tools/javac/recovery/CrashDueToUnreportedError.out
CrashDueToUnreportedError.java:14:20: compiler.err.cant.apply.symbol: kindname.constructor, Builder, CrashDueToUnreportedError.Person,java.lang.String, CrashDueToUnreportedError.Person, kindname.class, CrashDueToUnreportedError.Builder, (compiler.misc.arg.length.mismatch)
1 error
